src/components/style/cardBorded.module.css
.cardBorder_wrapper{
  position: relative;
  background-color: var(--background);
  justify-content: center;
  width: auto;
  padding: 3em;
  display: flex;
  flex-direction: column;
  gap: 15px;
  color: var(--text);
  border-radius: 4px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px -1px rgba(0,0,0,0.1);
  touch-action: pan-y;
}

.cardBorder_border1{
  position: absolute;
  border: 2px solid var(--secondary);
  width: calc(100% - 2em);
  height: calc(100% - 2.5em);
  top: 1.5em;
  left: 1em;
  pointer-events: none;
}
.cardBorder_border2{
  position: absolute;
  border: 2px solid var(--secondary);
  width: calc(100% - 3em);
  height: calc(100% - 1.5em);
  top: 1em;
  left: 1.5em;
  pointer-events: none;
}


.cardBorder_title{
  display: flex;
  flex-direction: row;
  gap: 20px;
  justify-content: center;
}
.cardBorder_title p{
}

.cardBorder_icon svg{
  height: 70px;
  width: 80px;
}

.cardBorder_wrapper_details{
  display: flex;
  flex-direction: column;
  gap: 5px;
  justify-content: center;
  align-items: center;
}

.cardBorder_wrapper_details_title{
  color: var(--text-title);
  font-size: 35px;
  line-height: 1;
  font-family: 'Great Vibes', cursive !important;
  font-style: normal;
  letter-spacing: 2.5px;
}

.cardBorder_wrapper_details_orario{
  color: var(--text-title);
  font-size: 25px;
  line-height: 1;
}

.cardBorder_details{
  text-align: center;
}

.cardBorder_wrapper_details_text{
  font-size: 20px;
  line-height: 1.4;
}

.cardBorder_wrapper button{
  line-height: 1.5;
  padding-top: 10px;
  padding-bottom: 10px;
  white-space: break-spaces;
}

@media (width <= 1024px) {
  .cardBorder_wrapper {
    width: 100%;
    max-width: unset;
    min-height: 200px;
    gap: 10px;
  }
}

@media (width <= 475px) {
  .cardBorder_wrapper_details_title{
    font-size: 26px;
  }

  .cardBorder_wrapper_details_orario{
    font-size: 21px;
  }

  .cardBorder_wrapper_details_text{
    font-size: 16px;
  }

  .cardBorder_wrapper button{
    font-size: 14px;
  }
}

  /*
  @media (width <= 375px) {
    .cardIndicazione_wrapper button{
      font-size: 2.5vw;
    }
  }
  */

